Text richtung der BBCode Klasse verbessert

--- a/WolkenNET/config.json
+++ b/WolkenNET/config.json
@@ -5,6 +5,6 @@
 	"mysqlip": "localhost",
 	"mysqlusername": "root",
 	"mysqlport": "3306",
-	"mysqldatabase": "pnet",
+	"mysqldatabase": "wolkennet",
 	"mysqlpassword": ""
 }
