--- a/WolkenNET/pom.xml
+++ b/WolkenNET/pom.xml
@@ -37,6 +37,11 @@
    			 <version>1.1.1</version>
 	    </dependency>
 	    <dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.10.9</version>
+		</dependency>
+	    <dependency>
 		  <groupId>org.mmbase.maven</groupId>
 		  <artifactId>mmbase-maven-plugin</artifactId>
 		  <version>2.0.1</version>
