--- a/WolkenNET/pom.xml
+++ b/WolkenNET/pom.xml
@@ -50,12 +50,12 @@
 		<dependency>
             <groupId>com.moandjiezana.toml</groupId>
             <artifactId>toml4j</artifactId>
-            <version>LATEST</version>
+            <version>0.7.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>LATEST</version>
+            <version>3.11</version>
         </dependency>
          <dependency>
 		    <groupId>com.sparkjava</groupId>
