First test version

--- a/WolkenNET/pom.xml
+++ b/WolkenNET/pom.xml
@@ -48,6 +48,11 @@
 		  <type>pom</type>
 		</dependency>
 		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.4</version>
+		</dependency>
+		<dependency>
             <groupId>com.moandjiezana.toml</groupId>
             <artifactId>toml4j</artifactId>
             <version>0.7.2</version>
